# github-actions-playground

./: .gitignore  README.md
.github/workflows/: check-changes.yml  check_changes.yml  docs-test.yml  python-quality-workflow.yml  python-test-workflow.yml  test-runner.yml  test.yml  tigger.yml
test/project_1/: pyproject.toml
test/project_1/project_1/: example_func.py
test/project_1/tests/: test_example_func.py
test/project_2/: pyproject.toml
test/project_2/docs/: conf.py  index.rst
test/project_2/tests/: test_example.py
tools/: README.md
tools/ci/: README.md  pyproject.toml  unittest_runner.py
tools/ci/testbot/: __main__.py  dependency.py  github_actions.py
tools/ci/tests/: test_dependency.py  test_example.py
tools/ci/unittest_runner/: unittest_runner.py
workflows/install-poetry/: action.yml
workflows/python-docs/: action.yml
workflows/python-lint/: action.yml
