[tool.poetry]
name = "project-1"
version = "0.1.0"
description = "Test Project 1"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
