[tool.poetry]
name = "project-2"
version = "0.1.0"
description = "Test Project 2"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_2"}]

[tool.poetry.dependencies]
python = "^3.10"
project_1 = { path = "./../project_1", develop = true }

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
coverage = "*"
mypy = "*"
pylint = "*"
sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"